--- a/Brigade meadows/Brigade_project/Brigade meadows/about.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/about.html
@@ -571,7 +571,7 @@
 </head>
 <body>
 <nav class="navbar">
-  <a href="#" class="navbar-brand">BRIGADE MEADOWS</a>
+  <a href="main.html" class="navbar-brand">BRIGADE MEADOWS</a>
   <div class="hamburger-menu" id="hamburgerMenu">
     <i class="fas fa-bars"></i>
   </div>
@@ -651,7 +651,7 @@
     <div class="footer-section">
       <h4>Quick Links</h4>
       <ul class="footer-list">
-        <li><a href="#hero-section">Home</a></li>
+        <li><a href="main.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="amenities.html">Amenities</a></li>
         <li><a href="events.html">Events</a></li>
