--- a/Brigade meadows/Brigade_project/Brigade meadows/events.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/events.html
@@ -696,7 +696,7 @@
 </head>
 <body>
 <nav class="navbar">
-  <a href="#" class="navbar-brand">BRIGADE MEADOWS</a>
+  <a href="main.html" class="navbar-brand">BRIGADE MEADOWS</a>
   <div class="hamburger-menu" id="hamburgerMenu">
     <i class="fas fa-bars"></i>
   </div>
