--- a/Brigade meadows/Brigade_project/Brigade meadows/main.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/main.html
@@ -573,7 +573,7 @@
 <body>
 <!-- Navbar Start -->
 <nav class="navbar">
-    <a href="#" class="navbar-brand">BRIGADE MEADOWS</a>
+    <a href="main.html" class="navbar-brand">BRIGADE MEADOWS</a>
     <div class="hamburger-menu" id="hamburgerMenu">
         <i class="fas fa-bars"></i>
     </div>
@@ -590,7 +590,7 @@
                 <li><a href="#">Downloads</a></li>
             </ul>
         </li>
-        <li class="nav-item"><a href="#">Contact</a></li>
+        <li class="nav-item"><a href="#footer-section">Contact</a></li>
     </ul>
 </nav>
 <!-- Navbar End -->
@@ -772,7 +772,7 @@
 <!-- FAQ Section End -->
 
 <!-- Footer Start -->
-<footer class="footer">
+<footer class="footer" id="footer-section">
     <div class="footer-grid">
         <div class="footer-section">
             <div class="footer-brand">BRIGADE MEADOWS</div>
